Implemented unit conversion
HTML: assigned necessary classes and ids to facilitate unit styling and js coding

JS: created appropriate global variables and wrote working code for unit conversion of the current cities weather display

CSS: fixed the proper hover and color response over C|F conversion links

--- a/src/styles.css
+++ b/src/styles.css
@@ -141,13 +141,13 @@ span.units a {
   text-decoration: none;
 }
 
-span.units a:hover {
-  cursor: pointer;
-  color: #6fcad3;
+span a.active {
+  color: dimgray;
+  cursor: default;
 }
 
-span a.inactive {
-  color: dimgray;
+span a.active:hover {
+  cursor: default;
 }
 
 p.current-high-low {
