--- a/src/styles.css
+++ b/src/styles.css
@@ -163,6 +163,7 @@ ul.weather-details {
   background: rgba(234, 169, 56, 0.2);
   border-radius: 4px;
   border: 3px solid rgba(234, 169, 56, 0.7);
+  color: dimgray;
   list-style: none;
   line-height: 20px;
   margin-bottom: 0px;
@@ -177,6 +178,7 @@ ul.weather-details {
 div.forecast-day {
   font-weight: 500;
 }
+
 div .forecast-high-temp {
   font-weight: bold;
 }
